[gd_scene load_steps=20 format=3 uid="uid://b0cp86nb5a0ys"]

[ext_resource type="Script" path="res://Script/enemy_scarab.gd" id="1_sk68o"]
[ext_resource type="Texture2D" uid="uid://drkue8pytwjt8" path="res://Assets/AndreasScarab_Legs.png" id="2_6lhv4"]
[ext_resource type="Texture2D" uid="uid://ditkmrdmoscht" path="res://Assets/rotatingarrow.png" id="3_0r4ra"]
[ext_resource type="Texture2D" uid="uid://mjj1sj7ks7iq" path="res://Assets/AndreasScarab_body1.png" id="3_vsblr"]
[ext_resource type="Texture2D" uid="uid://cbut86q0364u1" path="res://Assets/AndreasScarab_body2.png" id="4_g2biq"]
[ext_resource type="Texture2D" uid="uid://cvcvbac04nos2" path="res://Assets/YCSTA_healthbar-1.png" id="4_p4y7a"]
[ext_resource type="Texture2D" uid="uid://dlk2byf02et8q" path="res://Assets/AndreasScarab_body3.png" id="5_4qf3d"]
[ext_resource type="Texture2D" uid="uid://c70378fp1g0kl" path="res://Assets/YCSTA_healthbar-2.png" id="5_q54wd"]
[ext_resource type="Texture2D" uid="uid://dbmm2d2fmrbdx" path="res://Assets/AndreasScarab_body4.png" id="6_i0uk0"]
[ext_resource type="AudioStream" uid="uid://bg2xrdk3npnsa" path="res://Sounds/spellshort1.wav" id="7_xec1y"]
[ext_resource type="Texture2D" uid="uid://burhygv13akg8" path="res://Assets/shadow-big.png" id="10_mt2jn"]

[sub_resource type="Animation" id="Animation_roeck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_50v2h"]
resource_name = "bounce"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ym26"]
_data = {
"RESET": SubResource("Animation_roeck"),
"bounce": SubResource("Animation_50v2h")
}

[sub_resource type="Animation" id="Animation_2akjp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritecontainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spritecontainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vq5j7"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritecontainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ei3xv"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritecontainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.16, 0.879999), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spritecontainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.392157, 0.392157, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tudjj"]
_data = {
"RESET": SubResource("Animation_2akjp"),
"default": SubResource("Animation_vq5j7"),
"hurt": SubResource("Animation_ei3xv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1rmrd"]

[node name="Enemy_scarab" type="CharacterBody2D" groups=["enemy_m"]]
z_index = 1
texture_filter = 1
script = ExtResource("1_sk68o")

[node name="Spritecontainer" type="Node2D" parent="."]

[node name="Icon" type="Sprite2D" parent="Spritecontainer"]
texture_filter = 1
position = Vector2(0, 1)
texture = ExtResource("2_6lhv4")
hframes = 6

[node name="Anim" type="AnimationPlayer" parent="Spritecontainer/Icon"]
libraries = {
"": SubResource("AnimationLibrary_3ym26")
}

[node name="Body" type="Sprite2D" parent="Spritecontainer"]
position = Vector2(0, -1)
texture = ExtResource("3_vsblr")

[node name="Body2" type="Sprite2D" parent="Spritecontainer"]
position = Vector2(0, -2)
texture = ExtResource("4_g2biq")

[node name="Body3" type="Sprite2D" parent="Spritecontainer"]
position = Vector2(0, -2)
texture = ExtResource("5_4qf3d")

[node name="Body4" type="Sprite2D" parent="Spritecontainer"]
position = Vector2(0, -3)
texture = ExtResource("6_i0uk0")

[node name="EffectsAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tudjj")
}

[node name="Rot" type="Node2D" parent="."]
visible = false

[node name="Rotatingarrow" type="Sprite2D" parent="Rot"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("3_0r4ra")

[node name="Healthbar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -5.0
offset_top = -13.0
offset_right = 5.0
offset_bottom = -12.0
max_value = 10.0
value = 10.0
texture_under = ExtResource("4_p4y7a")
texture_progress = ExtResource("5_q54wd")

[node name="HURTbox_Enemy" type="Area2D" parent="."]
visible = false

[node name="box" type="CollisionShape2D" parent="HURTbox_Enemy"]
shape = SubResource("CircleShape2D_1rmrd")

[node name="Arrowshadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
z_index = -1
texture_filter = 1
position = Vector2(2.38419e-07, 4)
texture = ExtResource("10_mt2jn")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xec1y")

[node name="Timers" type="Node" parent="."]

[node name="UpdateTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="Timers/UpdateTimer" to="." method="_on_update_timer_timeout"]
